--- a/Proyecto_Final_Coder/css/style.css
+++ b/Proyecto_Final_Coder/css/style.css
@@ -79,9 +79,9 @@ header {
   background-size: cover;
   background-repeat: repeat;
   background-position: center center;
-  height: auto;
+  height: 100%;
   text-align: center;
-  padding-top: 30px;
+  padding-top: 100px;
   font-weight: bold; }
 
 /* Media query mobile */
