--- a/Proyecto_Final_Coder/css/style.css
+++ b/Proyecto_Final_Coder/css/style.css
@@ -82,27 +82,34 @@ header {
   height: 100%;
   text-align: center;
   padding-top: 100px;
-  font-weight: bold; }
+  font-weight: bold;
+  object-fit: cover; }
+  .imagen_fondo .img_tamano {
+    width: auto;
+    height: 400px;
+    padding: 5px;
+    align-items: center center;
+    object-fit: contain; }
 
 /* Media query mobile */
 @media screen and (min-width: 0) and (max-width: 576px) {
   .box {
     display: flex;
-    background-color: blueviolet;
+    background-color: #9f0942;
     grid-auto-columns: auto; } }
 
 /* Media query tablet */
 @media screen and (min-width: 576px) and (max-width: 992px) {
   .box {
     display: flex;
-    background-color: red;
+    background-color: black;
     grid-auto-columns: auto; } }
 
 /* Media query desktop */
 @media screen and (min-width: 992px) and (max-width: 1120px) {
   .box {
     display: flex;
-    background-color: greenyellow;
+    background-color: white;
     grid-auto-columns: auto; }
   .container_footer {
     display: flex; } }
@@ -124,9 +131,11 @@ header {
     background-color: #9f0942; }
 
 .container-formulario {
-  margin: 150px;
+  height: 500px;
+  margin: 5px 100px 50px 100%;
   margin-inline: 500px;
-  padding-inline: 1%; }
+  padding-inline: 1%;
+  margin-top: 50px; }
   .container-formulario .boton {
     background-color: white;
     color: black;
@@ -137,6 +146,8 @@ header {
       background-color: white;
       color: black;
       background-color: #9f0942; }
+    .container-formulario .boton .foo_contacto {
+      margin-top: 0px; }
 
 .container-maps {
   width: 600px;
